feat: Add server statistics, client version system, and deployment guides
- Add server statistics tracking (24h data with 5-minute intervals)
- Implement client version management system with database
- Add WebSocket-based file download system
- Create ServerDetailsPage with status chart and player statistics
- Add server badges (NEW, TOP, WIP, HARD, etc.)
- Improve UI/UX: download progress modal, game logs modal
- Fix server ping for all Minecraft versions (1.2.5 to latest)
- Add deployment guide for VDS setup
- Add client version creation guide
- Fix React Hooks order in ServerStatusChart
- Improve download and launch flow integration
- Add native library support for LWJGL
- Enhance server status display with real-time updates

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,32 +9,44 @@
     "start": "node dist/index.js",
     "migrate": "prisma migrate dev",
     "generate": "prisma generate",
-    "studio": "prisma studio"
+    "studio": "prisma studio",
+    "create-user": "tsx scripts/create-test-user.ts",
+    "list-users": "tsx scripts/list-users.ts",
+    "create-profile": "tsx scripts/create-test-profile.ts",
+    "create-profile-1.21": "tsx scripts/create-profile-1.21.ts",
+    "create-profile-custom": "tsx scripts/create-profile.ts",
+    "list-profiles": "tsx scripts/list-profiles.ts",
+    "download-minecraft": "tsx scripts/download-minecraft.ts",
+    "add-client-version": "tsx scripts/add-client-version.ts"
   },
   "dependencies": {
     "@modern-launcher/shared": "*",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
+    "@prisma/client": "^5.8.1",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
-    "node-rsa": "^1.1.1",
-    "ws": "^8.16.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "@prisma/client": "^5.8.1",
+    "extract-zip": "^2.0.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "minecraft-server-util": "^5.4.4",
+    "node-rsa": "^1.1.1",
+    "recharts": "^3.4.1",
+    "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/bcrypt": "^5.0.2",
-    "@types/ws": "^8.5.10",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.0",
-    "tsx": "^4.7.0",
+    "@types/ws": "^8.5.10",
     "prisma": "^5.8.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
