fix: исправления синхронизации файлов, проверки клиента и улучшения UI
Основные исправления:
- Исправлена проблема дублирования файлов при синхронизации (использован атомарный upsert)
- Исправлена проверка загруженности клиента (fileType вместо type, улучшена логика)
- Исправлена двойная синхронизация при запуске (ignoreInitial: true)
- Исправлена ошибка texture digest (localhost -> 127.0.0.1)
- Улучшена команда file sync (поддержка синхронизации по clientDirectory)
- Улучшена обработка завершения сессий игры (console.debug вместо warn)
- Добавлены новые UI компоненты (Container, LazyImage, LoadingSpinner, ProgressBar, Skeleton)
- Исправлены предупреждения CSS (@property от Tailwind v4)
- Добавлен uploads/ в .gitignore
- Удалены устаревшие файлы документации

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ coverage/
 
 # Production
 dist/
+dist-electron/
 build/
 out/
 release/
@@ -55,6 +56,7 @@ profiles/
 runtime/
 auth-handler.json
 config.local.json
+uploads/
 
 # Old Java files (if any remain)
 *.class
