--- a/packages/backend/.env.prod
+++ b/packages/backend/.env.prod
@@ -5,6 +5,7 @@ CORS_ORIGIN=http://5.188.119.206,http://5.188.119.206:5173,https://5.188.119.206
 DATABASE_URL=mysql://skala1_newl:Alekcey2009%40%40%40%40@skala1.beget.tech:3306/skala1_newl
 JWT_SECRET=71b647b9d7a663f2d0cffc6432b94f6f
 JWT_EXPIRY=24h
+UPDATES_DIR=/opt/launcher/packages/backend/updates
 RATE_LIMIT_ENABLED=true
 RATE_LIMIT_MAX_ATTEMPTS=5
 RATE_LIMIT_WINDOW_MS=60000
