--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,24 +70,22 @@ jobs:
           workspaces: './packages/frontend/src-tauri -> target'
 
       - name: Install frontend dependencies
+        working-directory: ./packages/frontend
         run: npm ci
 
       - name: Build shared package
         run: npm run build:shared
 
       - name: Build frontend
-        run: |
-          cd packages/frontend
-          npm ci
-          npm run build
+        working-directory: ./packages/frontend
+        run: npm run build
 
       - name: Build Tauri app
+        working-directory: ./packages/frontend
         env:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-        run: |
-          cd packages/frontend
-          npm run tauri build --target ${{ matrix.artifacts }}
+        run: npm run tauri build --target ${{ matrix.artifacts }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
