ci: Fix projectPath and tauriScript for monorepo
- Set projectPath to ./packages/frontend (Tauri project root)
- Add explicit tauriScript: npm run tauri

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,5 +63,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          projectPath: ./packages/frontend/src-tauri
+          projectPath: ./packages/frontend
+          tauriScript: npm run tauri
           args: ${{ matrix.args }}
