--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: install frontend dependencies
         working-directory: ./packages/frontend
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: build shared package
         run: npm run build:shared
